apps/base/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/instance: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.4
          resources:
            requests:
              cpu: "10m"
              memory: "1Gi"
            limits:
              cpu: 6
              memory: "6Gi"
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
              subPath: jellyfin/config
            - name: jellyfin-data
              mountPath: /data/movies
              subPath: media/movies
            - name: jellyfin-data
              mountPath: /data/shows
              subPath: media/shows
            - name: jellyfin-data
              mountPath: /data/ripped
              subPath: media/ripped
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: jellyfin-data-pvc
      securityContext:
        runAsUser: 995
        runAsGroup: 501
        fsGroup: 501
        fsGroupChangePolicy: "OnRootMismatch"
