apps/base/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
    - name: transmission
      port: 9091
      targetPort: 9091
      protocol: TCP
    - name: prowlarr
      port: 9696
      targetPort: 9696
      protocol: TCP
    - name: radarr
      port: 7878
      targetPort: 7878
      protocol: TCP
    - name: sonarr
      port: 8989
      targetPort: 8989
      protocol: TCP
    - name: jellyseerr
      port: 5055
      targetPort: 5055
      protocol: TCP
