apps/base/jellyfin/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: jellyfin
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - jellyfin.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
